#最低要求
cmake_minimum_required(VERSION 3.21)
#项目名称
project(Algorithm)

#设置CMake变量
set(CMAKE_CXX_STANDARD 17)

#将main.cpp生成可执行程序Demo
add_executable(Algorithm main.cpp
        dependencies/include/bits/stdc++.h
        dependencies/include/leetcode.h)

#添加bits/stdc++的路径
include_directories(BEFORE dependencies/include)

#SingleFileExecutionPlugin
add_executable(test_1 test/test_1.cpp)
set_target_properties(test_1 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(test test/test.cpp)
set_target_properties(test PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")

add_executable(Leetcode_1_two-sum src/leetcode/editor/cn/Leetcode_1_two-sum.cpp)
set_target_properties(Leetcode_1_two-sum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2_add-two-numbers src/leetcode/editor/cn/Leetcode_2_add-two-numbers.cpp)
set_target_properties(Leetcode_2_add-two-numbers PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_49_group-anagrams src/leetcode/editor/cn/Leetcode_49_group-anagrams.cpp)
set_target_properties(Leetcode_49_group-anagrams PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_128_longest-consecutive-sequence src/leetcode/editor/cn/Leetcode_128_longest-consecutive-sequence.cpp)
set_target_properties(Leetcode_128_longest-consecutive-sequence PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_35_search-insert-position src/leetcode/editor/cn/Leetcode_35_search-insert-position.cpp)
set_target_properties(Leetcode_35_search-insert-position PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_69_sqrtx src/leetcode/editor/cn/Leetcode_69_sqrtx.cpp)
set_target_properties(Leetcode_69_sqrtx PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_226_invert-binary-tree src/leetcode/editor/cn/Leetcode_226_invert-binary-tree.cpp)
set_target_properties(Leetcode_226_invert-binary-tree PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_104_maximum-depth-of-binary-tree src/leetcode/editor/cn/Leetcode_104_maximum-depth-of-binary-tree.cpp)
set_target_properties(Leetcode_104_maximum-depth-of-binary-tree PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_101_symmetric-tree src/leetcode/editor/cn/Leetcode_101_symmetric-tree.cpp)
set_target_properties(Leetcode_101_symmetric-tree PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_74_search-a-2d-matrix src/leetcode/editor/cn/Leetcode_74_search-a-2d-matrix.cpp)
set_target_properties(Leetcode_74_search-a-2d-matrix PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_13_roman-to-integer src/leetcode/editor/cn/Leetcode_13_roman-to-integer.cpp)
set_target_properties(Leetcode_13_roman-to-integer PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_JianZhiOffer10-II_qing-wa-tiao-tai-jie-wen-ti-lcof src/leetcode/editor/cn/Leetcode_JianZhiOffer10-II_qing-wa-tiao-tai-jie-wen-ti-lcof.cpp)
set_target_properties(Leetcode_JianZhiOffer10-II_qing-wa-tiao-tai-jie-wen-ti-lcof PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_JianZhiOffer10-I_fei-bo-na-qi-shu-lie-lcof src/leetcode/editor/cn/Leetcode_JianZhiOffer10-I_fei-bo-na-qi-shu-lie-lcof.cpp)
set_target_properties(Leetcode_JianZhiOffer10-I_fei-bo-na-qi-shu-lie-lcof PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_70_climbing-stairs src/leetcode/editor/cn/Leetcode_70_climbing-stairs.cpp)
set_target_properties(Leetcode_70_climbing-stairs PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_118_pascals-triangle src/leetcode/editor/cn/Leetcode_118_pascals-triangle.cpp)
set_target_properties(Leetcode_118_pascals-triangle PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_120_triangle src/leetcode/editor/cn/Leetcode_120_triangle.cpp)
set_target_properties(Leetcode_120_triangle PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_169_majority-element src/leetcode/editor/cn/Leetcode_169_majority-element.cpp)
set_target_properties(Leetcode_169_majority-element PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_279_perfect-squares src/leetcode/editor/cn/Leetcode_279_perfect-squares.cpp)
set_target_properties(Leetcode_279_perfect-squares PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_198_house-robber src/leetcode/editor/cn/Leetcode_198_house-robber.cpp)
set_target_properties(Leetcode_198_house-robber PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_LCP50_WHnhjV src/leetcode/editor/cn/Leetcode_LCP50_WHnhjV.cpp)
set_target_properties(Leetcode_LCP50_WHnhjV PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_121_best-time-to-buy-and-sell-stock src/leetcode/editor/cn/Leetcode_121_best-time-to-buy-and-sell-stock.cpp)
set_target_properties(Leetcode_121_best-time-to-buy-and-sell-stock PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(BinarySearch src/leetcode/binarySearch/BinarySearch.cpp)
set_target_properties(BinarySearch PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_160_intersection-of-two-linked-lists src/leetcode/editor/cn/Leetcode_160_intersection-of-two-linked-lists.cpp)
set_target_properties(Leetcode_160_intersection-of-two-linked-lists PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_206_reverse-linked-list src/leetcode/editor/cn/Leetcode_206_reverse-linked-list.cpp)
set_target_properties(Leetcode_206_reverse-linked-list PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_234_palindrome-linked-list src/leetcode/editor/cn/Leetcode_234_palindrome-linked-list.cpp)
set_target_properties(Leetcode_234_palindrome-linked-list PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_213_house-robber-ii src/leetcode/editor/cn/Leetcode_213_house-robber-ii.cpp)
set_target_properties(Leetcode_213_house-robber-ii PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_337_house-robber-iii src/leetcode/editor/cn/Leetcode_337_house-robber-iii.cpp)
set_target_properties(Leetcode_337_house-robber-iii PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_322_coin-change src/leetcode/editor/cn/Leetcode_322_coin-change.cpp)
set_target_properties(Leetcode_322_coin-change PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Ramsey src/solution/Ramsey.cpp)
set_target_properties(Ramsey PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_141_linked-list-cycle src/leetcode/editor/cn/Leetcode_141_linked-list-cycle.cpp)
set_target_properties(Leetcode_141_linked-list-cycle PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_34_find-first-and-last-position-of-element-in-sorted-array src/leetcode/editor/cn/Leetcode_34_find-first-and-last-position-of-element-in-sorted-array.cpp)
set_target_properties(Leetcode_34_find-first-and-last-position-of-element-in-sorted-array PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_108_convert-sorted-array-to-binary-search-tree src/leetcode/editor/cn/Leetcode_108_convert-sorted-array-to-binary-search-tree.cpp)
set_target_properties(Leetcode_108_convert-sorted-array-to-binary-search-tree PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_142_linked-list-cycle-ii src/leetcode/editor/cn/Leetcode_142_linked-list-cycle-ii.cpp)
set_target_properties(Leetcode_142_linked-list-cycle-ii PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(sort src/leetcode/sort/sort.cpp)
set_target_properties(sort PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(chemicals src/solution/chemicals.cpp)
set_target_properties(chemicals PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(container src/rookie/container/container.cpp)
set_target_properties(container PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_283_move-zeroes src/leetcode/editor/cn/Leetcode_283_move-zeroes.cpp)
set_target_properties(Leetcode_283_move-zeroes PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(string src/rookie/string/string.cpp)
set_target_properties(string PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(exam src/solution/exam.cpp)
set_target_properties(exam PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_15_3sum src/leetcode/editor/cn/Leetcode_15_3sum.cpp)
set_target_properties(Leetcode_15_3sum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_922_sort-array-by-parity-ii src/leetcode/editor/cn/Leetcode_922_sort-array-by-parity-ii.cpp)
set_target_properties(Leetcode_922_sort-array-by-parity-ii PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_287_find-the-duplicate-number src/leetcode/editor/cn/Leetcode_287_find-the-duplicate-number.cpp)
set_target_properties(Leetcode_287_find-the-duplicate-number PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_42_trapping-rain-water src/leetcode/editor/cn/Leetcode_42_trapping-rain-water.cpp)
set_target_properties(Leetcode_42_trapping-rain-water PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_881_boats-to-save-people src/leetcode/editor/cn/Leetcode_881_boats-to-save-people.cpp)
set_target_properties(Leetcode_881_boats-to-save-people PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_11_container-with-most-water src/leetcode/editor/cn/Leetcode_11_container-with-most-water.cpp)
set_target_properties(Leetcode_11_container-with-most-water PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_475_heaters src/leetcode/editor/cn/Leetcode_475_heaters.cpp)
set_target_properties(Leetcode_475_heaters PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_41_first-missing-positive src/leetcode/editor/cn/Leetcode_41_first-missing-positive.cpp)
set_target_properties(Leetcode_41_first-missing-positive PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_739_daily-temperatures src/leetcode/editor/cn/Leetcode_739_daily-temperatures.cpp)
set_target_properties(Leetcode_739_daily-temperatures PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_743_network-delay-time src/leetcode/editor/cn/Leetcode_743_network-delay-time.cpp)
set_target_properties(Leetcode_743_network-delay-time PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(shortest_path src/leetcode/graph/shortest_path.cpp)
set_target_properties(shortest_path PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_200_number-of-islands src/leetcode/editor/cn/Leetcode_200_number-of-islands.cpp)
set_target_properties(Leetcode_200_number-of-islands PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(dfs src/leetcode/graph/dfs.cpp)
set_target_properties(dfs PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_695_max-area-of-island src/leetcode/editor/cn/Leetcode_695_max-area-of-island.cpp)
set_target_properties(Leetcode_695_max-area-of-island PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_875_koko-eating-bananas src/leetcode/editor/cn/Leetcode_875_koko-eating-bananas.cpp)
set_target_properties(Leetcode_875_koko-eating-bananas PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_410_split-array-largest-sum src/leetcode/editor/cn/Leetcode_410_split-array-largest-sum.cpp)
set_target_properties(Leetcode_410_split-array-largest-sum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_719_find-k-th-smallest-pair-distance src/leetcode/editor/cn/Leetcode_719_find-k-th-smallest-pair-distance.cpp)
set_target_properties(Leetcode_719_find-k-th-smallest-pair-distance PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2141_maximum-running-time-of-n-computers src/leetcode/editor/cn/Leetcode_2141_maximum-running-time-of-n-computers.cpp)
set_target_properties(Leetcode_2141_maximum-running-time-of-n-computers PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_136_single-number src/leetcode/editor/cn/Leetcode_136_single-number.cpp)
set_target_properties(Leetcode_136_single-number PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2894_divisible-and-non-divisible-sums-difference src/leetcode/editor/cn/Leetcode_2894_divisible-and-non-divisible-sums-difference.cpp)
set_target_properties(Leetcode_2894_divisible-and-non-divisible-sums-difference PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2895_minimum-processing-time src/leetcode/editor/cn/Leetcode_2895_minimum-processing-time.cpp)
set_target_properties(Leetcode_2895_minimum-processing-time PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2896_apply-operations-to-make-two-strings-equal src/leetcode/editor/cn/Leetcode_2896_apply-operations-to-make-two-strings-equal.cpp)
set_target_properties(Leetcode_2896_apply-operations-to-make-two-strings-equal PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_weekly-contest-367 src/leetcode/contest/Leetcode_weekly-contest-367.cpp)
set_target_properties(Leetcode_weekly-contest-367 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_137_single-number-ii src/leetcode/editor/cn/Leetcode_137_single-number-ii.cpp)
set_target_properties(Leetcode_137_single-number-ii PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2560_house-robber-iv src/leetcode/editor/cn/Leetcode_2560_house-robber-iv.cpp)
set_target_properties(Leetcode_2560_house-robber-iv PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_260_single-number-iii src/leetcode/editor/cn/Leetcode_260_single-number-iii.cpp)
set_target_properties(Leetcode_260_single-number-iii PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_3_longest-substring-without-repeating-characters src/leetcode/editor/cn/Leetcode_3_longest-substring-without-repeating-characters.cpp)
set_target_properties(Leetcode_3_longest-substring-without-repeating-characters PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_209_minimum-size-subarray-sum src/leetcode/editor/cn/Leetcode_209_minimum-size-subarray-sum.cpp)
set_target_properties(Leetcode_209_minimum-size-subarray-sum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_713_subarray-product-less-than-k src/leetcode/editor/cn/Leetcode_713_subarray-product-less-than-k.cpp)
set_target_properties(Leetcode_713_subarray-product-less-than-k PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2652_sum-multiples src/leetcode/editor/cn/Leetcode_2652_sum-multiples.cpp)
set_target_properties(Leetcode_2652_sum-multiples PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_263_ugly-number src/leetcode/editor/cn/Leetcode_263_ugly-number.cpp)
set_target_properties(Leetcode_263_ugly-number PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_264_ugly-number-ii src/leetcode/editor/cn/Leetcode_264_ugly-number-ii.cpp)
set_target_properties(Leetcode_264_ugly-number-ii PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_1201_ugly-number-iii src/leetcode/editor/cn/Leetcode_1201_ugly-number-iii.cpp)
set_target_properties(Leetcode_1201_ugly-number-iii PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_162_find-peak-element src/leetcode/editor/cn/Leetcode_162_find-peak-element.cpp)
set_target_properties(Leetcode_162_find-peak-element PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_153_find-minimum-in-rotated-sorted-array src/leetcode/editor/cn/Leetcode_153_find-minimum-in-rotated-sorted-array.cpp)
set_target_properties(Leetcode_153_find-minimum-in-rotated-sorted-array PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_33_search-in-rotated-sorted-array src/leetcode/editor/cn/Leetcode_33_search-in-rotated-sorted-array.cpp)
set_target_properties(Leetcode_33_search-in-rotated-sorted-array PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2530_maximal-score-after-applying-k-operations src/leetcode/editor/cn/Leetcode_2530_maximal-score-after-applying-k-operations.cpp)
set_target_properties(Leetcode_2530_maximal-score-after-applying-k-operations PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_4_median-of-two-sorted-arrays src/leetcode/editor/cn/Leetcode_4_median-of-two-sorted-arrays.cpp)
set_target_properties(Leetcode_4_median-of-two-sorted-arrays PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_438_find-all-anagrams-in-a-string src/leetcode/editor/cn/Leetcode_438_find-all-anagrams-in-a-string.cpp)
set_target_properties(Leetcode_438_find-all-anagrams-in-a-string PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_1726_tuple-with-same-product src/leetcode/editor/cn/Leetcode_1726_tuple-with-same-product.cpp)
set_target_properties(Leetcode_1726_tuple-with-same-product PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_429_n-ary-tree-level-order-traversal src/leetcode/editor/cn/Leetcode_429_n-ary-tree-level-order-traversal.cpp)
set_target_properties(Leetcode_429_n-ary-tree-level-order-traversal PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2525_categorize-box-according-to-criteria src/leetcode/editor/cn/Leetcode_2525_categorize-box-according-to-criteria.cpp)
set_target_properties(Leetcode_2525_categorize-box-according-to-criteria PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_56_merge-intervals src/leetcode/editor/cn/Leetcode_56_merge-intervals.cpp)
set_target_properties(Leetcode_56_merge-intervals PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_238_product-of-array-except-self src/leetcode/editor/cn/Leetcode_238_product-of-array-except-self.cpp)
set_target_properties(Leetcode_238_product-of-array-except-self PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_560_subarray-sum-equals-k src/leetcode/editor/cn/Leetcode_560_subarray-sum-equals-k.cpp)
set_target_properties(Leetcode_560_subarray-sum-equals-k PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_239_sliding-window-maximum src/leetcode/editor/cn/Leetcode_239_sliding-window-maximum.cpp)
set_target_properties(Leetcode_239_sliding-window-maximum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2316_count-unreachable-pairs-of-nodes-in-an-undirected-graph src/leetcode/editor/cn/Leetcode_2316_count-unreachable-pairs-of-nodes-in-an-undirected-graph.cpp)
set_target_properties(Leetcode_2316_count-unreachable-pairs-of-nodes-in-an-undirected-graph PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_weekly-contest-368 src/leetcode/contest/Leetcode_weekly-contest-368.cpp)
set_target_properties(Leetcode_weekly-contest-368 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_weekly-contest-366 src/leetcode/contest/Leetcode_weekly-contest-366.cpp)
set_target_properties(Leetcode_weekly-contest-366 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_weekly-contest-364 src/leetcode/contest/Leetcode_weekly-contest-364.cpp)
set_target_properties(Leetcode_weekly-contest-364 PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode42TrappingRainWater src/bilibili40/chapter22/Leetcode42TrappingRainWater.cpp)
set_target_properties(Leetcode42TrappingRainWater PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_303_range-sum-query-immutable src/leetcode/editor/cn/Leetcode_303_range-sum-query-immutable.cpp)
set_target_properties(Leetcode_303_range-sum-query-immutable PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_325_maximum-size-subarray-sum-equals-k src/leetcode/editor/cn/Leetcode_325_maximum-size-subarray-sum-equals-k.cpp)
set_target_properties(Leetcode_325_maximum-size-subarray-sum-equals-k PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_974_subarray-sums-divisible-by-k src/leetcode/editor/cn/Leetcode_974_subarray-sums-divisible-by-k.cpp)
set_target_properties(Leetcode_974_subarray-sums-divisible-by-k PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_523_continuous-subarray-sum src/leetcode/editor/cn/Leetcode_523_continuous-subarray-sum.cpp)
set_target_properties(Leetcode_523_continuous-subarray-sum PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_525_contiguous-array src/leetcode/editor/cn/Leetcode_525_contiguous-array.cpp)
set_target_properties(Leetcode_525_contiguous-array PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2678_number-of-senior-citizens src/leetcode/editor/cn/Leetcode_2678_number-of-senior-citizens.cpp)
set_target_properties(Leetcode_2678_number-of-senior-citizens PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_73_set-matrix-zeroes src/leetcode/editor/cn/Leetcode_73_set-matrix-zeroes.cpp)
set_target_properties(Leetcode_73_set-matrix-zeroes PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_54_spiral-matrix src/leetcode/editor/cn/Leetcode_54_spiral-matrix.cpp)
set_target_properties(Leetcode_54_spiral-matrix PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2909_minimum-sum-of-mountain-triplets-ii src/leetcode/editor/cn/Leetcode_2909_minimum-sum-of-mountain-triplets-ii.cpp)
set_target_properties(Leetcode_2909_minimum-sum-of-mountain-triplets-ii PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2910_minimum-number-of-groups-to-create-a-valid-assignment src/leetcode/editor/cn/Leetcode_2910_minimum-number-of-groups-to-create-a-valid-assignment.cpp)
set_target_properties(Leetcode_2910_minimum-number-of-groups-to-create-a-valid-assignment PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_1720_decode-xored-array src/leetcode/editor/cn/Leetcode_1720_decode-xored-array.cpp)
set_target_properties(Leetcode_1720_decode-xored-array PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2433_find-the-original-array-of-prefix-xor src/leetcode/editor/cn/Leetcode_2433_find-the-original-array-of-prefix-xor.cpp)
set_target_properties(Leetcode_2433_find-the-original-array-of-prefix-xor PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_1310_xor-queries-of-a-subarray src/leetcode/editor/cn/Leetcode_1310_xor-queries-of-a-subarray.cpp)
set_target_properties(Leetcode_1310_xor-queries-of-a-subarray PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")
add_executable(Leetcode_2683_neighboring-bitwise-xor src/leetcode/editor/cn/Leetcode_2683_neighboring-bitwise-xor.cpp)
set_target_properties(Leetcode_2683_neighboring-bitwise-xor PROPERTIES RUNTIME_OUTPUT_DIRECTORY "build")